import the AIS data types defined in drivers/orogen/nmea2000

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,3 @@
 rock_library(ais_base
-    SOURCES Dummy.cpp
-    HEADERS Dummy.hpp)
-
-rock_executable(ais_base_bin Main.cpp
-    DEPS ais_base)
-
+    HEADERS Position.hpp VesselInformation.hpp VoyageInformation.hpp
+)
