move enum validation code to ais_base
It was originally implemented directly in nmea0183's conversion
functions, but we'll definitely need it for nmea2000 as well.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 rock_library(ais_base
     HEADERS Position.hpp VesselInformation.hpp VoyageInformation.hpp
+    SOURCES Position.cpp VesselInformation.cpp
+    DEPS_PKGCONFIG base-types
 )
