--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,7 @@
-rock_gtest(test_suite suite.cpp test_Position.cpp test_VesselInformation.cpp
-   DEPS ais_base)
+rock_gtest(test_suite
+      suite.cpp
+      test_Position.cpp
+      test_VesselInformation.cpp
+      test_VesselInfoAccumulator.cpp
+   DEPS
+      ais_base)
